# Manukers

./: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml
internal/aws/: client.go  ec2.go  ecr.go  eks.go  elb.go  s3.go  types.go
internal/theme/: theme.go
internal/ui/: app.go  theme.go
internal/ui/views/: ec2.go  ecr.go  eks.go  graph.go  loadbalancer.go  overview.go  picker.go  s3.go  securitygroup.go  targetgroup.go
src/manukers/: __init__.py
